--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,6 +68,299 @@ body {
   }
 }
 
+
+
+
+
+
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
+  position: relative;
+}
+
+.timeline:before {
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  content: " ";
+  width: 3px;
+  background-color: #eeeeee;
+  left: 50%;
+  margin-left: -1.5px;
+}
+
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li > .timeline-panel {
+  width: 46%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  border-radius: 2px;
+  padding: 20px;
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+  position: absolute;
+  top: 26px;
+  right: -15px;
+  display: inline-block;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
+  position: absolute;
+  top: 27px;
+  right: -14px;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0 solid #fff;
+  border-bottom: 14px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  margin-left: -25px;
+  background-color: #ffffff;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
+}
+
+.timeline-badge.primary {
+  background-color: #2e6da4 !important;
+}
+
+.timeline-badge.success {
+  background-color: #3f903f !important;
+}
+
+.timeline-badge.warning {
+  background-color: #f0ad4e !important;
+}
+
+.timeline-badge.danger {
+  background-color: #d9534f !important;
+}
+
+.timeline-badge.info {
+  background-color: #5bc0de !important;
+}
+
+.timeline-title {
+  margin-top: 0;
+  color: inherit;
+}
+
+.timeline-body > p,
+.timeline-body > ul {
+  margin-bottom: 0;
+}
+
+.timeline-body > p + p {
+    margin-top: 5px;
+}
+
+@media (max-width: 767px) {
+  ul.timeline:before {
+    left: 40px;
+  }
+
+  ul.timeline > li > .timeline-panel {
+    width: calc(100% - 90px);
+    width: -moz-calc(100% - 90px);
+    width: -webkit-calc(100% - 90px);
+  }
+
+  ul.timeline > li > .timeline-badge {
+    left: 15px;
+    margin-left: 0;
+    top: 16px;
+  }
+
+  ul.timeline > li > .timeline-panel {
+      float: right;
+  }
+
+  ul.timeline > li > .timeline-panel:before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+  }
+
+  ul.timeline > li > .timeline-panel:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
+  }
+}
+
+
+.avatar {
+  background-position: left top;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+
+ul.skills, ul.technologies {
+}
+ul.skills li.js,
+ul.technologies li.js {
+  list-style-image: url(../images/bullet-js.png);
+}
+ul.skills li.ng,
+ul.technologies li.ng {
+  list-style-image: url(../images/bullet-ng.png);
+}
+ul.skills li.vs,
+ul.technologies li.vs {
+  list-style-image: url(../images/bullet-vs.png);
+}
+ul.skills li.dotnet,
+ul.technologies li.dotnet {
+  list-style-image: url(../images/bullet-dotnet.png);
+}
+ul.skills li.ms,
+ul.technologies li.ms {
+  list-style-image: url(../images/bullet-ms.png);
+}
+ul.skills li.bootstrap,
+ul.technologies li.bootstrap {
+  list-style-image: url(../images/bullet-twitter.png);
+}
+ul.skills li.nsb,
+ul.technologies li.nsb {
+  list-style-image: url(../images/bullet-nsb.png);
+}
+ul.skills li.map,
+ul.technologies li.map {
+  list-style-image: url(../images/bullet-map.png);
+}
+ul.skills li.git,
+ul.technologies li.git {
+  list-style-image: url(../images/bullet-git.png);
+}
+ul.skills li.gh,
+ul.technologies li.gh {
+  list-style-image: url(../images/bullet-gh.png);
+}
+ul.skills li.svn,
+ul.technologies li.svn {
+  list-style-image: url(../images/bullet-svn.png);
+}
+ul.skills li.hudson,
+ul.technologies li.hudson {
+  list-style-image: url(../images/bullet-hudson.png);
+}
+ul.skills li.teamcity,
+ul.technologies li.teamcity {
+  list-style-image: url(../images/bullet-teamcity.png);
+}
+ul.skills li.vagrant,
+ul.technologies li.vagrant {
+  list-style-image: url(../images/bullet-vagrant.png);
+}
+ul.skills li.fedora,
+ul.technologies li.fedora {
+  list-style-image: url(../images/bullet-fedora.png);
+}
+ul.skills li.vbox,
+ul.technologies li.vbox {
+  list-style-image: url(../images/bullet-vbox.png);
+}
+ul.skills li.py,
+ul.technologies li.py {
+  list-style-image: url(../images/bullet-python.png);
+}
+ul.skills li.es,
+ul.technologies li.es {
+  list-style-image: url(../images/bullet-elasticsearch.png);
+}
+ul.skills li.logstash,
+ul.technologies li.logstash {
+  list-style-image: url(../images/bullet-logstash.png);
+}
+ul.skills li.kibana,
+ul.technologies li.kibana {
+  list-style-image: url(../images/bullet-kibana.png);
+}
+ul.skills li.exadata,
+ul.technologies li.exadata {
+  list-style-image: url(../images/bullet-exadata.png);
+}
+
+
+
+
+
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
