--- a/app/views/experience.html
+++ b/app/views/experience.html
@@ -1,45 +1,41 @@
-<div class="container">
-    <div class="page-header">
-        <h1 id="timeline">Professional Experience</h1>
-    </div>
-    <ul class="timeline">
-        <li ng-repeat="experience in experiences| orderBy : Date.parse(experience.period.start) : true" ng-class-odd="'timeline-inverted'">
-          <div class="timeline-badge">
-            <img src="{{experience.company.icon}}" alt="{{experience.company.name}} logo" />
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4 class="timeline-title">
-                {{experience.company.name}}
-              </h4>
-              <p class="small text-muted" ng-show="experience.location.name">
-	            <i class="glyphicon glyphicon-map-marker"></i>
-	            <span>{{experience.location.name}}</span>
-              </p>
-              <p class="small text-muted">
-                <i class="glyphicon glyphicon-time"></i>
-                <span>{{experience.period.start | date:'MMMM yyyy'}}</span>
-                -
-                <span ng-show="experience.period.end">{{experience.period.end | date:'MMMM yyyy'}}</span>
-                <em ng-hide="experience.period.end">present</em>
-              </p>
-              <h5>{{experience.job.title}}</h5>
-              <p><em>{{experience.job.description}}</em></p>
-            </div>
-            <div class="timeline-body">
-              <p ng-repeat="paragraph in experience.job.brief">{{paragraph}}</p>
-              <ul class="technologies">
-                <li ng-repeat="technology in experience.job.technologies" class="{{technology.code}}">
-                	{{technology.description}}
-                </li>
-              </ul>
-              <ul class="skills">
-                <li ng-repeat="skill in experience.job.skills" class="{{skill.code}}">
-                  {{skill.description}}
-                </li>
-              </ul>
-            </div>
-          </div>
-        </li>
-    </ul>
-</div>
+<h2>Professional Experience</h2>
+<ul class="timeline">
+    <li ng-repeat="experience in experiences" ng-class-odd="'timeline-inverted'">
+      <div class="timeline-badge">
+        <img ng-src="{{experience.company.icon}}" alt="{{experience.company.name}} logo" />
+      </div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">
+            {{experience.company.name}}
+          </h4>
+          <p class="small text-muted" ng-show="experience.location.name">
+          <i class="glyphicon glyphicon-map-marker"></i>
+          <span>{{experience.location.name}}</span>
+          </p>
+          <p class="small text-muted">
+            <i class="glyphicon glyphicon-time"></i>
+            <span>{{experience.period.start | date:'MMMM yyyy'}}</span>
+            -
+            <span ng-show="experience.period.end">{{experience.period.end | date:'MMMM yyyy'}}</span>
+            <em ng-hide="experience.period.end">present</em>
+          </p>
+          <h5>{{experience.job.title}}</h5>
+          <p><em>{{experience.job.description}}</em></p>
+        </div>
+        <div class="timeline-body">
+          <p ng-repeat="paragraph in experience.job.brief">{{paragraph}}</p>
+          <ul class="technologies">
+            <li ng-repeat="technology in experience.job.technologies" class="{{technology.code}}">
+            	{{technology.description}}
+            </li>
+          </ul>
+          <ul class="skills">
+            <li ng-repeat="skill in experience.job.skills" class="{{skill.code}}">
+              {{skill.description}}
+            </li>
+          </ul>
+        </div>
+      </div>
+    </li>
+</ul>
