--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,7 +1,57 @@
-<h2>Contact</h2>
-<dl>
-  <dt>Email</dt>
-  <dd>rthijssen@gmail.com</dd>
-  <dt>Phone</dt>
-  <dd>+41 76 319 4941</dd>
-</dl>
+<div class="container" style="margin-top: 40px;">
+  <dl>
+    <dt>
+      <i class="glyphicon glyphicon-envelope"></i>
+      <a href="mailto:rthijssen@gmail.com">
+        rthijssen@gmail.com
+      </a>
+    </dt>
+
+    <dt>
+      <i class="glyphicon glyphicon-phone"></i>
+      +41 76 319 4941
+    </dt>
+
+    <dd>
+      <a href="https://linkedin.com/in/thijssen">
+        <img src="images/in.png" alt="LinkedIn logo" />
+        linkedin.com/in/thijssen
+      </a>
+    </dd>
+
+    <dd>
+      <a href="https://facebook.com/rob.thijssen">
+        <img src="images/facebook.png" alt="facebook logo" />
+        facebook.com/rob.thijssen
+      </a>
+    </dd>
+
+    <dd>
+      <a href="https://twitter.com/grenade">
+        <img src="images/bullet-twitter.png" alt="twitter logo" />
+        twitter.com/grenade
+      </a>
+    </dd>
+
+    <dd>
+      <a href="https://google.com/+RobThijssen">
+        <img src="images/plus.png" alt="Google+ logo" />
+        +RobThijssen
+      </a>
+    </dd>
+
+    <dd>
+      <a href="http://stackoverflow.com/users/68115/grenade">
+        <img src="images/stackoverflow.png" alt="stackoverflow logo" />
+        grenade@stackoverflow
+      </a>
+    </dd>
+
+    <dd>
+      <a href="https://github.com/grenade">
+        <img src="images/bullet-gh.png" alt="github logo" />
+        grenade@github
+      </a>
+    </dd>
+  </dl>
+</div>
