--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -367,6 +367,10 @@ ul.skills li.report,
 ul.technologies li.report {
   list-style-image: url(../images/bullet-report.png);
 }
+ul.skills li.p4,
+ul.technologies li.p4 {
+  list-style-image: url(../images/bullet-p4.png);
+}
 li.uop {
   list-style-image: url(../images/uop.png);
 }
