--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -4,54 +4,62 @@
       <i class="glyphicon glyphicon-envelope"></i>
       <a href="mailto:rthijssen@gmail.com">
         rthijssen@gmail.com
-      </a>
+      </a>:
+      <em>my prefered form of communication</em>
     </dt>
 
     <dt>
       <i class="glyphicon glyphicon-phone"></i>
-      +41 76 319 4941
+      <span>+41 76 319 4941</span> :
+      <em>if we need a rapid dialogue</em>
     </dt>
 
     <dd>
       <a href="https://linkedin.com/in/thijssen">
         <img src="images/in.png" alt="LinkedIn logo" />
         linkedin.com/in/thijssen
-      </a>
+      </a>:
+      <em>if you want to keep in touch, professionally</em>
     </dd>
 
     <dd>
       <a href="https://facebook.com/rob.thijssen">
         <img src="images/facebook.png" alt="facebook logo" />
         facebook.com/rob.thijssen
-      </a>
+      </a>:
+      <em>if you want to keep in touch, socially</em>
     </dd>
 
     <dd>
       <a href="https://twitter.com/grenade">
         <img src="images/bullet-twitter.png" alt="twitter logo" />
         twitter.com/grenade
-      </a>
+      </a>:
+      <em>no reason</em>
     </dd>
 
     <dd>
       <a href="https://google.com/+RobThijssen">
         <img src="images/plus.png" alt="Google+ logo" />
         +RobThijssen
-      </a>
+      </a>:
+      <em>if you want to talk about motorcycles</em>
     </dd>
 
     <dd>
       <a href="http://stackoverflow.com/users/68115/grenade">
         <img src="images/stackoverflow.png" alt="stackoverflow logo" />
         grenade@stackoverflow
-      </a>
+      </a>:
+      <em>if you want to see some code</em>
     </dd>
 
     <dd>
       <a href="https://github.com/grenade">
         <img src="images/bullet-gh.png" alt="github logo" />
         grenade@github
-      </a>
+      </a>:
+      <em>if you want to collaborate on something</em>
     </dd>
   </dl>
 </div>
