--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,7 +7,7 @@
       here
     </a>.
   </p>
-  <p>For those of you who prefer the <em>tldr;</em>, a summary follows:</p>
+  <p>For those of you who prefer the <em>tl;dr</em>, a summary follows:</p>
   <p>
     <em>
       I am an educated software developer and continuous integration specialist,
