--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,11 +1,16 @@
 <div class="container" style="margin-top: 40px;">
   <dl>
     <dt>
+      <i class="glyphicon glyphicon-map-marker"></i>
+      <em>Come see me in Basel (CH), or tell me how to find you</em>
+    </dt>
+
+    <dt>
       <i class="glyphicon glyphicon-envelope"></i>
       <a href="mailto:rthijssen@gmail.com">
         rthijssen@gmail.com
       </a>:
-      <em>my prefered form of communication</em>
+      <em>if proximity is an issue</em>
     </dt>
 
     <dt>
