--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -371,6 +371,10 @@ ul.skills li.p4,
 ul.technologies li.p4 {
   list-style-image: url(../images/bullet-p4.png);
 }
+ul.skills li.aws,
+ul.technologies li.aws {
+  list-style-image: url(../images/bullet-aws.png);
+}
 li.uop {
   list-style-image: url(../images/uop.png);
 }
