removed Basel and updated mobile no

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -2,7 +2,7 @@
   <dl>
     <dt>
       <i class="glyphicon glyphicon-map-marker"></i>
-      <em>Come see me in Basel (CH), or tell me how to find you</em>
+      <em>Come see me in Plymouth (Devon), or tell me how to find you</em>
     </dt>
 
     <dt>
@@ -15,7 +15,7 @@
 
     <dt>
       <i class="glyphicon glyphicon-phone"></i>
-      <span>+41 76 319 4941</span> :
+      <span>+44 747 987 0570</span> :
       <em>if we need a rapid dialogue</em>
     </dt>
 
