--- a/app/views/experience.html
+++ b/app/views/experience.html
@@ -1,7 +1,7 @@
 <ul class="timeline">
     <li ng-repeat="experience in experiences" ng-class-odd="'timeline-inverted'">
       <div class="timeline-badge">
-        <img ng-src="{{experience.company.icon}}" alt="{{experience.company.name}} logo" />
+        <img src="{{experience.company.icon}}" alt="{{experience.company.name}} logo" />
       </div>
       <div class="timeline-panel">
         <div class="timeline-heading">
