--- a/app/views/experience.html
+++ b/app/views/experience.html
@@ -1,3 +1,8 @@
+<p>
+  This is a <a href="http://bootsnipp.com/snippets/featured/timeline-responsive">timeline</a>
+  showing the places I have worked in recent years and some of the technology stacks
+  I utilised while working with the organisation.
+</p>
 <ul class="timeline">
     <li ng-repeat="experience in experiences" ng-class-odd="'timeline-inverted'">
       <div class="timeline-badge">
