new bullet styles

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -375,6 +375,22 @@ ul.skills li.aws,
 ul.technologies li.aws {
   list-style-image: url(../images/bullet-aws.png);
 }
+ul.skills li.go,
+ul.technologies li.go {
+  list-style-image: url(../images/bullet-go.png);
+}
+ul.skills li.ps,
+ul.technologies li.ps {
+  list-style-image: url(../images/bullet-ps.png);
+}
+ul.skills li.bash,
+ul.technologies li.bash {
+  list-style-image: url(../images/bullet-bash.png);
+}
+ul.skills li.hg,
+ul.technologies li.hg {
+  list-style-image: url(../images/bullet-hg.png);
+}
 li.uop {
   list-style-image: url(../images/uop.png);
 }
