a quick note to recruiters

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,6 +7,20 @@
       here
     </a>.
   </p>
+  <hr />
+  <p>
+    <strong>Update: October, 2015</strong><br />
+    For the benefit of recruiters: I'm not looking for work. My current employer provides the benefits and environment described below. Don't call me if you represent someone who can't make my life even better than it already is. By all means, connect on LinkedIn or email me, but be aware of what you're up against if you want to lure me to greener pastures.
+  </p>
+  <ul>
+    <li>Great salary, bonus and benefits. Better than market rates.</li>
+    <li>Remote working, from anywhere in the galaxy that has internet access.</li>
+    <li>Offices in major cities on most continents, if I want to come in and enjoy free food in a relaxed environment surrounded by likeminded superstars.</li>
+    <li>Challenging work, that forces me to learn new and interesting things.</li>
+    <li>Smart peers, who are happy to share their knowledge.</li>
+    <li>Open by default. Most of our work is out in the open for everyone and anyone to scrutinise. Our only secrets are the ones required for keeping our users safe.</li>
+  </ul>
+  <hr />
   <p>For those of you who prefer the <em>tl;dr</em>, a summary follows:</p>
   <p>
     <em>
