CV link updated to gdocs url

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
   <h2>Rob Thijssen <small>Curriculum Vitae</small></h2>
   <p>
     These pages host my up-to-date CV. An MS Word version for placement agencies is available
-    <a href="data/cv/rob-thijssen-cv.doc">
+    <a href="https://docs.google.com/document/d/1zAkDeXzQmPjYkgnh7O-I83lCW45VWk0xcV_F-iekeDU/export?format=doc">
       <img src="images/ms-word.svg" style="width: 16px; height: 16px; border: 0;"/>
       here
     </a>.
