pdf download link

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,10 +1,12 @@
 <div class="container" style="margin-top: 40px;">
   <h2>Rob Thijssen <small>Curriculum Vitae</small></h2>
   <p>
-    These pages host my up-to-date CV. An MS Word version for placement agencies is available
-    <a href="https://docs.google.com/document/d/1zAkDeXzQmPjYkgnh7O-I83lCW45VWk0xcV_F-iekeDU/export?format=doc">
+    These pages host my up-to-date CV. Other formats for placement agencies are available here:
+    <a href="https://goo.gl/E3oMcS">
       <img src="images/ms-word.svg" style="width: 16px; height: 16px; border: 0;"/>
-      here
+    </a>
+    <a href="https://goo.gl/2xNZ2U">
+      <img src="images/pdf.png" style="width: 16px; height: 16px; border: 0;"/>
     </a>.
   </p>
   <hr />
