nicer formating for doc links

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,13 +2,21 @@
   <h2>Rob Thijssen <small>Curriculum Vitae</small></h2>
   <p>
     These pages host my up-to-date CV. Other formats for placement agencies are available here:
-    <a href="https://goo.gl/E3oMcS">
-      <img src="images/ms-word.svg" style="width: 16px; height: 16px; border: 0;"/>
-    </a>
-    <a href="https://goo.gl/2xNZ2U">
-      <img src="images/pdf.png" style="width: 16px; height: 16px; border: 0;"/>
-    </a>.
   </p>
+  <ul style="list-style-type: none;">
+    <li>
+      <a href="https://goo.gl/E3oMcS" style="text-decoration: none;">
+        <img src="images/ms-word.svg" style="width: 20px; height: 20px; border: 0;"/>
+        Robin Thijssen - Curriculum Vitae.docx
+      </a>
+    </li>
+    <li>
+      <a href="https://goo.gl/2xNZ2U" style="text-decoration: none;">
+        <img src="images/pdf.png" style="width: 20px; height: 20px; border: 0;"/>
+        Robin Thijssen - Curriculum Vitae.pdf
+      </a>
+    </li>
+  </ul>
   <hr />
   <p>For those of you who prefer the <em>tl;dr</em>, a summary follows:</p>
   <p>
