--- a/app/views/home.html
+++ b/app/views/home.html
@@ -31,16 +31,16 @@
   <p>
     <em>
       I prefer to work with forward thinking organisations who embrace some of the best technology available.
-      It is my experience that development teams using Git for source control,
+      It is my experience that development teams using distributed source control,
       mostly have their house in order with the rest of the tech stack.
       I am happy to work with teams who aspire to utilise better technologies.
       I will also work with teams who do not embrace these ideas,
-      if the money or location is exceptional or if the assignment is brief and focused.
+      if the remuneration or location is exceptional or if the assignment is brief and focused.
     </em>
   </p>
   <p>
     <em>
-      I have big hair, ride a very fast motorcycle and enjoy friendship, good food and red wine,
+      I have big hair, ride a fast motorcycle and enjoy friendship, good food and red wine,
       which makes me a big smiler and fun to have around.
     </em>
   </p>
