--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -380,6 +380,10 @@ ul.skills li.go,
 ul.technologies li.go {
   list-style-image: url(../images/bullet-go.png);
 }
+ul.skills li.rust,
+ul.technologies li.rust {
+  list-style-image: url(../images/bullet-rust.png);
+}
 ul.skills li.ps,
 ul.technologies li.ps {
   list-style-image: url(../images/bullet-ps.png);
