--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -270,136 +270,169 @@ body {
 }
 
 
-ul.skills, ul.technologies {
+ul.links, ul.skills, ul.technologies {
 }
+ul.links li.js,
 ul.skills li.js,
 ul.technologies li.js {
   list-style-image: url(../images/bullet-js.png);
 }
+ul.links li.ng,
 ul.skills li.ng,
 ul.technologies li.ng {
   list-style-image: url(../images/bullet-ng.png);
 }
+ul.links li.vs,
 ul.skills li.vs,
 ul.technologies li.vs {
   list-style-image: url(../images/bullet-vs.png);
 }
+ul.links li.dotnet,
 ul.skills li.dotnet,
 ul.technologies li.dotnet {
   list-style-image: url(../images/bullet-dotnet.png);
 }
+ul.links li.ms,
 ul.skills li.ms,
 ul.technologies li.ms {
   list-style-image: url(../images/bullet-ms.png);
 }
+ul.links li.bootstrap,
 ul.skills li.bootstrap,
 ul.technologies li.bootstrap {
   list-style-image: url(../images/bullet-twitter.png);
 }
+ul.links li.nsb,
 ul.skills li.nsb,
 ul.technologies li.nsb {
   list-style-image: url(../images/bullet-nsb.png);
 }
+ul.links li.map,
 ul.skills li.map,
 ul.technologies li.map {
   list-style-image: url(../images/bullet-map.png);
 }
+ul.links li.git,
 ul.skills li.git,
 ul.technologies li.git {
   list-style-image: url(../images/bullet-git.png);
 }
+ul.links li.gh,
 ul.skills li.gh,
 ul.technologies li.gh {
   list-style-image: url(../images/bullet-gh.png);
 }
+ul.links li.svn,
 ul.skills li.svn,
 ul.technologies li.svn {
   list-style-image: url(../images/bullet-svn.png);
 }
+ul.links li.hudson,
 ul.skills li.hudson,
 ul.technologies li.hudson {
   list-style-image: url(../images/bullet-hudson.png);
 }
+ul.links li.teamcity,
 ul.skills li.teamcity,
 ul.technologies li.teamcity {
   list-style-image: url(../images/bullet-teamcity.png);
 }
+ul.links li.vagrant,
 ul.skills li.vagrant,
 ul.technologies li.vagrant {
   list-style-image: url(../images/bullet-vagrant.png);
 }
+ul.links li.fedora,
 ul.skills li.fedora,
 ul.technologies li.fedora {
   list-style-image: url(../images/bullet-fedora.png);
 }
+ul.links li.vbox,
 ul.skills li.vbox,
 ul.technologies li.vbox {
   list-style-image: url(../images/bullet-vbox.png);
 }
+ul.links li.py,
 ul.skills li.py,
 ul.technologies li.py {
   list-style-image: url(../images/bullet-python.png);
 }
+ul.links li.es,
 ul.skills li.es,
 ul.technologies li.es {
   list-style-image: url(../images/bullet-elasticsearch.png);
 }
+ul.links li.logstash,
 ul.skills li.logstash,
 ul.technologies li.logstash {
   list-style-image: url(../images/bullet-logstash.png);
 }
+ul.links li.kibana,
 ul.skills li.kibana,
 ul.technologies li.kibana {
   list-style-image: url(../images/bullet-kibana.png);
 }
+ul.links li.db,
 ul.skills li.db,
 ul.technologies li.db {
   list-style-image: url(../images/bullet-db.png);
 }
+ul.links li.java,
 ul.skills li.java,
 ul.technologies li.java {
   list-style-image: url(../images/bullet-java.png);
 }
+ul.links li.php,
 ul.skills li.php,
 ul.technologies li.php {
   list-style-image: url(../images/bullet-php.png);
 }
+ul.links li.report,
 ul.skills li.report,
 ul.technologies li.report {
   list-style-image: url(../images/bullet-report.png);
 }
+ul.links li.p4,
 ul.skills li.p4,
 ul.technologies li.p4 {
   list-style-image: url(../images/bullet-p4.png);
 }
+ul.links li.aws,
 ul.skills li.aws,
 ul.technologies li.aws {
   list-style-image: url(../images/bullet-aws.png);
 }
+ul.links li.go,
 ul.skills li.go,
 ul.technologies li.go {
   list-style-image: url(../images/bullet-go.png);
 }
+ul.links li.rust,
 ul.skills li.rust,
 ul.technologies li.rust {
   list-style-image: url(../images/bullet-rust.png);
 }
+ul.links li.ps,
 ul.skills li.ps,
 ul.technologies li.ps {
   list-style-image: url(../images/bullet-ps.png);
 }
+ul.links li.bash,
 ul.skills li.bash,
 ul.technologies li.bash {
   list-style-image: url(../images/bullet-bash.png);
 }
+ul.links li.hg,
 ul.skills li.hg,
 ul.technologies li.hg {
   list-style-image: url(../images/bullet-hg.png);
 }
+ul.links li.docker,
 ul.skills li.docker,
 ul.technologies li.docker {
   list-style-image: url(../images/bullet-docker.png);
 }
+ul.links li.terraform,
 ul.skills li.terraform,
 ul.technologies li.terraform {
   list-style-image: url(../images/bullet-terraform.png);
