--- a/app/views/experience.html
+++ b/app/views/experience.html
@@ -29,7 +29,8 @@
             <li ng-repeat="link in experience.job.links" class="{{link.class}}">
               <a href="{{link.href}}" alt="{{link.title}}" title="{{link.title}}">
                 {{link.text}}
-              </a>
+              </a><br />
+              {{link.description}}
             </li>
           </ul>
 
